--- a/.github/workflows/release-1.yml
+++ b/.github/workflows/release-1.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
+      - name: "log the current value"
+        run: "echo ${GITHUB_REF#refs/tags/}"
+
       - name: "Determine tag"
         run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
 
