--- a/.github/workflows/release-2.yml
+++ b/.github/workflows/release-2.yml
@@ -57,5 +57,5 @@ jobs:
 
           # Whitespace-separated list of files to upload
           artifacts: |
-            main.py
+            rc/main.py
             another/file.ipa
